// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hits accepts a custom className 1`] = `
<div
  className="cvi-Hits MyCustomHits"
  style={Object {}}
>
  <div
    className="cvi-Hits-list"
  >
    <div
      className="cvi-Hits-item"
    >
      <div
        id="0"
      />
    </div>
    <div
      className="cvi-Hits-item"
    >
      <div
        id="1"
      />
    </div>
    <div
      className="cvi-Hits-item"
    >
      <div
        id="2"
      />
    </div>
  </div>
</div>
`;

exports[`Hits accepts a hitComponent prop 1`] = `
<div
  className="cvi-Hits"
  style={Object {}}
>
  <div
    className="cvi-Hits-list"
  >
    <div
      className="cvi-Hits-item"
    >
      <div
        id="0"
      />
    </div>
    <div
      className="cvi-Hits-item"
    >
      <div
        id="1"
      />
    </div>
    <div
      className="cvi-Hits-item"
    >
      <div
        id="2"
      />
    </div>
  </div>
</div>
`;
